# cars

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
cars/: __init__.py  cli_entry.py  common.py  constants.py  exceptions.py
cars/cli/: __init__.py  collector.py  collector_google.py  helpers.py
cars/config/: __init__.py  app.py  base.py  cars.py
cars/domain/data_collectors/: collectors.py
cars/domain/google_sheets_integration/: operations.py  sheets.py
config/: cars.yaml  config.yaml
