[metadata]
name = cars
version = 0.0.1
author = pik.paval
author_email = pik.paval@gmail.com
description = Project for managing books data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mayty/cars
project_urls =
    Bug Tracker = https://github.com/mayty/cars/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pyyaml >=6.0.0,<7.0.0
    pydantic >=1.9.0,<2.0.0
    requests >=2.27.0,<3.0.0
    click >=8.0.3,<9.0.0
    xlwt-fix ==1.3.1
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
    oauth2client
python_requires = >=3.10

[options.extras_require]
dev =
    mypy <1.0.0
    types-setuptools
    types-PyYAML
    types-requests
    black >=21.12.b0,<22.0.0
    pytest

[options.packages.find]
include = *
exclude = *test*

[options.entry_points]
console_scripts =
    cars = cars.cli_entry:cli_root
